# Faroela

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
cmake/: Utilities.cmake  utilities.cmake
faroela/: CMakeLists.txt
faroela/api/: CMakeLists.txt  api.json  generate.py
faroela/api/extra/: cpp_head.hpp  cpp_tail.hpp
faroela/api/extra/cxx/: tail
faroela/api/include/faroela/api/: faroela.hpp  fwd.hpp  types.hpp
faroela/api/src/: null.cpp
faroela/common/: CMakeLists.txt
faroela/common/include/faroela/common/: formatters.hpp  log.hpp  pch.hpp  result.hpp
faroela/common/src/: log.cpp  result.cpp
faroela/include/faroela/: core.hpp  delegate.hpp  formatters.hpp  hid.hpp  log.hpp  pch.hpp  platform.hpp  render.hpp  result.hpp  vfs.hpp
faroela/include/faroela-api/: faroela.hpp  types.hpp
faroela/src/: api.cpp  core.cpp  hid.cpp  log.cpp  render.cpp  result.cpp  vfs.cpp
faroela/src/nix_generic/: CMakeLists.txt  platform.cpp
faroela/src/windows/: platform.cpp
pharaoh/: CMakeLists.txt  app.manifest  pharaoh.csproj
pharaoh/src/: faroela.cs  internalcalls.cs  log.cs  main.cs
pharaoh/src/native/: core.cs  log.cs
pharaoh/src/ui/: appwindow.axaml  appwindow.axaml.cs  appwindowmodel.cs  console.axaml  console.axaml.cs  contentbrowser.axaml  contentbrowser.axaml.cs  dockview.axaml  dockview.axaml.cs  inspector.axaml  inspector.axaml.cs  pharaohapp.axaml  pharaohapp.axaml.cs  scenehierarchy.axaml  scenehierarchy.axaml.cs
sphinx/: CMakeLists.txt
sphinx/include/sphinx/: hid.hpp  pch.hpp  screen.hpp
sphinx/src/: hid.cpp  main.cpp  screen.cpp
